@@ -1,3 +1,11 @@
+2010-03-02  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el (emacs-lisp-mode-hook): Turn off auto-fill-mode in
+	emacs-lisp-mode.
+	(find-tag): Add advice tags-file-name-advice.
+	(x-stretch-cursor): Add (setq x-stretch-cursor t).
+	(ring-bell-function): Add (setq ring-bell-function 'ignore).
+
 2010-03-01  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el (generic-x): Load generic-x.
